# hacker-news-sentiment

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-03-10-hn-sentiment-cli.md
docs/superpowers/specs/: 2026-03-10-hn-sentiment-cli-design.md
hn_sentiment/: analyzer.py  cli.py  embedder.py  fetcher.py  renderer.py  retriever.py  sampler.py
tests/: test_analyzer.py  test_embedder.py  test_fetcher.py  test_retriever.py  test_sampler.py
